crates/core/tests/snapshots/un_interop_require_wildcard_rule__preserves_side_effecting_second_argument.snap
---
source: crates/core/tests/un_interop_require_wildcard_rule.rs
expression: render(input)
---
import _interopRequireWildcard from "@babel/runtime/helpers/interopRequireWildcard";
const _a = _interopRequireWildcard(require("a"), probe());
console.log(_a);
