crates/core/tests/snapshots/un_interop_require_wildcard_rule__preserves_spread_arguments.snap
---
source: crates/core/tests/un_interop_require_wildcard_rule.rs
expression: render(input)
---
import _interopRequireWildcard from "@babel/runtime/helpers/interopRequireWildcard";
const _a = _interopRequireWildcard(...args);
console.log(_a);
