crates/core/tests/snapshots/un_interop_require_wildcard_rule__preserves_wildcard_for_non_require_args.snap
---
source: crates/core/tests/un_interop_require_wildcard_rule.rs
expression: output
---
const ns = _interopRequireWildcard(factory());
console.log(ns.default);
