crates/core/tests/snapshots/un_interop_require_wildcard_rule__reassigned_binding_is_not_converted_to_an_import.snap
---
source: crates/core/tests/un_interop_require_wildcard_rule.rs
expression: render(input)
---
import __a from "a";
let _a = __a;
_a = fallback();
console.log(_a.x);
