crates/core/tests/snapshots/un_interop_require_wildcard_rule__removes_wildcard_helper_declaration.snap
---
source: crates/core/tests/un_interop_require_wildcard_rule.rs
expression: output
---
import * as _a from "a";
